# TypeConverterApi

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/TypeConverterApi/: containerconverter.h  sfinae.h  typeconverter.h  typeconverterapi.h  void_t.h
src/: containerconverter.cpp  sfinae.cpp  typeconverter.cpp
tests/: CMakeLists.txt  containerconverter.cpp  containerconverter_test.cpp  typeconverter._test.cpp  typeconverter.cpp
